# DCC_calibration

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  imgui.ini  imgui.ini0
cmake/: toolchain-mingw64.cmake
config/: sensor_config_20pt.json  sensor_config_20pt_wls.json  sensor_config_example.json
data/examples/: demo_fitter_wls_seq.json  demo_wls_config.json
docs/: DCC校正step-by-step詳解.md  DCC校正step-by-step詳解_light.html  M0_階段報告_規格制定與規劃.html  M1_階段報告_投影片.html  M1_驗收報告.md  M2_階段報告_投影片.html  PDAF校正開發流程指南.html  PDAF校正開發流程指南.md  PhaseD-1_PD像素解析圖解.html  Sim工作台說明.html  Windows交叉編譯說明.md  chart公差_投影片.html  chart距離公差分析.md  fitter實驗_反向WLS與EIV.md  fitter實驗_投影片.html  focus曲線圖解說明.html  整合介面速覽_精簡版.html  核心算法與IO介面_縱覽報告.html  演算法數學細節_回歸與focus峰值.html  開發紀錄_M0-M1.md
docs/superpowers/plans/: 2026-07-16-eeprom-equiv-output.md  2026-07-17-fitter-wls-eiv.md  2026-07-18-chart-distance-tolerance.md
docs/superpowers/specs/: 2026-07-16-eeprom-equiv-output-design.md  2026-07-17-fitter-wls-eiv-design.md  2026-07-18-chart-distance-tolerance-design.md
specs/: SPEC-000_專案總覽.md  SPEC-001_系統需求.md  SPEC-002_校正流程規格.md  SPEC-003_架構與模組介面.md  SPEC-004_資料格式.md  SPEC-005_驗證與測試計畫.md
src/dcc_app/: CMakeLists.txt
src/dcc_app/include/dcc_app/: pipeline.hpp  session.hpp
src/dcc_app/src/: pipeline.cpp  session.cpp
src/dcc_cli/: CMakeLists.txt  main.cpp
src/dcc_core/: CMakeLists.txt
src/dcc_core/include/dcc_core/: aggregate.hpp  chart_dist.hpp  eeprom_codec.hpp  error.hpp  focus.hpp  qsigma.hpp  regression.hpp  sweep.hpp  units.hpp  validate.hpp
src/dcc_core/src/: aggregate.cpp  chart_dist.cpp  eeprom_codec.cpp  error.cpp  focus.cpp  qsigma.cpp  regression.cpp  sweep.cpp  validate.cpp
src/dcc_gui/: CMakeLists.txt  gui_state.cpp  gui_state.hpp  main.cpp  panels.cpp  panels.hpp
src/dcc_gui_common/: CMakeLists.txt
src/dcc_gui_common/include/dcc_gui_common/: file_dialog.hpp  theme.hpp
src/dcc_gui_common/src/: file_dialog.cpp
src/dcc_io/: CMakeLists.txt
src/dcc_io/include/dcc_io/: config.hpp  disp_seq_reader.hpp  eeprom_equiv.hpp  logging.hpp  raw_reader.hpp  synth.hpp
src/dcc_io/src/: config.cpp  disp_seq_reader.cpp  eeprom_equiv.cpp  logging.cpp  raw_reader.cpp  synth.cpp
src/dcc_seqview/: CMakeLists.txt  README.md  main.cpp  panels.cpp  panels.hpp
src/dcc_seqview/include/dcc_seqview/: seq_loader.hpp  viewer_state.hpp
src/dcc_seqview/src/: seq_loader.cpp  viewer_state.cpp
src/dcc_sim/: CMakeLists.txt
src/dcc_sim/include/dcc_sim/: synth.hpp
src/dcc_sim/src/: synth.cpp
tests/: CMakeLists.txt  chart_dist_test.cpp  config_test.cpp  eeprom_equiv_test.cpp  fitter_test.cpp  it_pipeline_test.cpp  logging_test.cpp  qsigma_test.cpp  raw_test.cpp  seqview_loader_test.cpp  test_helpers.hpp  ut01_sweep_test.cpp  ut02_reader_test.cpp  ut03_unit_conversion_test.cpp  ut04_invalid_samples_test.cpp  ut05_regression_test.cpp  ut06_focus_test.cpp  ut07_validate_test.cpp  ut08_eeprom_test.cpp  ut09_units_test.cpp  ut10_aggregate_test.cpp
